<resources>
    <string name="app_name">Amazing Quiz</string>
    <string name="settings">Settings</string>
    <string name="start_quiz">Start new quiz</string>
    <string name="next">Next</string>
    <string name="quiz_settings">Quiz Settings</string>
    <string name="limit">Limit</string>
    <string name="get_started">Get started</string>`
    <string name="difficulty">Difficulty</string>
    <string name="categories">Categories</string>
    <string name="cb_timer_text">Use the timer (your points will be increased by 2 times).</string>
    <string name="times_is_up">Time is up!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="remember_me">Remember me</string>
    <string name="email">Email</string>
    <string name="tv_return_to_sign_up">Return to Sign-up</string>
    <string name="sign_up">Sign-up</string>
    <string name="sign_up2">Enter your name</string>
    <string name="first_name">First name</string>
    <string name="tv_login">You have an account ? Log-in</string>
    <string name="last_name">Last name</string>
    <string name="authentication_failed">Check your email and password and try again!</string>
    <string name="empty_field">Empty field!</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="verification_email">Verification email</string>
    <string name="verify_text">An email has been sent to you to verify your account.</string>
    <string name="here">HERE</string>
    <string name="sent_verify_email_text">If you didn\'t receive an email, click </string>
    <string name="check_your_mail">Check your mail.</string>
    <string name="greetings">Greetings,</string>
    <string name="dear_user">Dear user</string>
    <string name="your_score">About you:</string>
    <string name="your_rank">Your rank</string>
    <string name="beginner">Beginner</string>
    <string name="to_next_rank">To next rank</string>
    <string name="points_left_until_the_next_level">points left until the next level</string>
    <string name="question">Question: </string>
    <string name="correct_answer">Correct answer: </string>
    <string name="my_answer">My answer: </string>
    <string name="score">Score: </string>
    <string name="total_result">Total result</string>
    <string name="total_questions">Total questions:</string>
    <string name="total_correct_answers">Total correct answers:</string>
    <string name="points_received">Points received:</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="total_score">Total score:</string>
    <string name="_0">0</string>
    <string name="your_favorite_themes">My favorite themes</string>
    <string name="cont">Continue</string>
    <string name="yes1">Yes</string>
    <string name="yes2">Yes, I Do!</string>
    <string name="no1">No</string>
    <string name="no2">No, continue</string>
    <string name="difficulty_card">Difficulty:</string>
    <string name="meeting_text">I’ve been looking forward to meeting you. What is your name?</string>
    <string name="hello">Greetings, dear user!!!</string>
    <string name="nice_to_meet_you">Nice to meet you!</string>
    <string name="correct_difficulty">Choose the correct difficulty.</string>
    <string name="question_card">Question:</string>
    <string name="exit">Exit</string>
    <string name="close_app_message">You are about to exit the application. How do you want to do it?</string>
    <string name="close_app">Close app</string>
    <string name="logout">Logout</string>
    <string name="photo">Photo?</string>
    <string name="add_photo_message">Would you like to add a photo?</string>
    <string name="attention">Attention!!!</string>
</resources>