<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/d_16"
        android:text="@string/verification_email"
        android:textColor="@color/black"
        android:textSize="@dimen/s_25"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_16"
        android:text="@string/verify_text"
        android:textSize="@dimen/s_18"
        android:layout_marginTop="@dimen/d_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/check_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_your_mail"
        android:textSize="@dimen/s_18"
        android:textColor="@color/link_color"
        android:layout_marginStart="@dimen/d_16"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_16"
        android:paddingVertical="@dimen/d_16"
        android:text="@string/sent_verify_email_text"
        android:textSize="@dimen/s_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_mail" />

    <TextView
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/d_16"
        android:text="@string/here"
        android:textColor="@color/link_color"
        android:textSize="@dimen/s_18"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>