<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/d_16"
        android:text="@string/quiz_settings"
        android:textSize="@dimen/s_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_0"
        android:layout_marginVertical="@dimen/d_16"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/d_8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/limit"
                android:textSize="@dimen/s_22" />

            <com.google.android.material.slider.Slider
                android:id="@+id/limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_16"
                android:layout_marginEnd="@dimen/d_16"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="20" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_0"
                android:layout_marginStart="@dimen/d_16"
                android:layout_marginTop="@dimen/d_8"
                android:layout_marginEnd="@dimen/d_16"
                android:layout_weight="1"
                android:hint="@string/difficulty">

                <AutoCompleteTextView
                    android:id="@+id/difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_16"
                android:layout_marginTop="@dimen/d_8"
                android:layout_marginEnd="@dimen/d_16" />

            <CheckBox
                android:id="@+id/use_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_16"
                android:layout_marginTop="@dimen/d_8"
                android:layout_marginEnd="@dimen/d_16"
                android:text="@string/cb_timer_text"
                android:textSize="@dimen/s_18" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textAllCaps="true"
        android:layout_marginBottom="@dimen/d_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>