<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_16"
        android:layout_marginEnd="@dimen/d_16"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/d_16"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sign_up2"
                android:textColor="@color/black"
                android:textSize="@dimen/s_25"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:hint="@string/first_name"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/et_max_length"
                style="@style/EditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_surname"
                android:hint="@string/last_name"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/et_max_length"
                style="@style/EditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <Button
        android:id="@+id/btn_sign_up"
        style="@style/MainButton"
        android:layout_marginBottom="@dimen/d_80"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>