<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:background="@drawable/background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d_8"
        app:cardBackgroundColor="@color/background"
        app:cardElevation="@dimen/d_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_head_total_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_result"
                android:textAllCaps="true"
                android:layout_margin="@dimen/d_8"
                android:textSize="@dimen/s_18"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_head_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_8"
                android:text="@string/total_questions"
                android:textSize="@dimen/s_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_head_total_result" />

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_8"
                android:textSize="@dimen/s_25"
                android:textStyle="bold"
                tool:text = "20"
                app:layout_constraintBottom_toBottomOf="@+id/tv_head_question"
                app:layout_constraintStart_toEndOf="@+id/tv_head_question"
                app:layout_constraintTop_toTopOf="@+id/tv_head_question" />

            <TextView
                android:id="@+id/tv_head_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_8"
                android:text="@string/total_correct_answers"
                android:textSize="@dimen/s_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_answers"
                app:layout_constraintTop_toBottomOf="@id/tv_head_total_result" />

            <TextView
                android:id="@+id/tv_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_8"
                android:textSize="@dimen/s_25"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_head_answers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_head_answers"
                tool:text="20" />

            <TextView
                android:id="@+id/tv_head_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_8"
                android:paddingVertical="@dimen/d_8"
                android:text="@string/points_received"
                android:textSize="@dimen/s_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_head_answers" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_8"
                android:textSize="@dimen/s_25"
                android:textStyle="bold"
                android:paddingVertical="@dimen/d_8"
                app:layout_constraintBottom_toBottomOf="@+id/tv_head_score"
                app:layout_constraintStart_toEndOf="@+id/tv_head_score"
                app:layout_constraintTop_toBottomOf="@+id/tv_head_question"
                tool:text="120" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_0"
        android:layout_marginHorizontal="@dimen/d_8"
        android:layout_marginVertical="@dimen/d_16"
        app:cardElevation="@dimen/d_16"
        app:cardBackgroundColor="@color/background_transparent"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_total">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu"
        android:textAllCaps="true"
        android:layout_marginBottom="@dimen/d_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>